overlapping issue solve

--- a/src/Pages/Events/EventCarousel.module.scss
+++ b/src/Pages/Events/EventCarousel.module.scss
@@ -40,7 +40,7 @@
   }
 }
 
-@media screen and (max-height: 640px) {
+@media screen and (max-height: 800px) {
   .cardContainer {
     left: 80vw;
     top: 30vh;
